--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "ljonesfl/blahg": "0.5.*"
     },
     "require-dev": {
-        "phpunit/phpunit": "9.*"
+        "phpunit/phpunit": "9.*",
+        "mikey179/vfsstream": "^1.6"
     },
     "autoload": {
         "psr-4": {
