--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "ext-curl": "*",
         "ext-json": "*",
-        "neuron-php/mvc": "^0.6.38",
+        "neuron-php/mvc": "0.7.*",
         "ljonesfl/blahg": "0.5.*"
     },
     "require-dev": {
