--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
         "ext-json": "*",
         "neuron-php/mvc": "0.8.*",
         "neuron-php/cli": "0.8.*",
-        "ljonesfl/blahg": "0.5.*",
-        "robmorgan/phinx": "^0.16"
+        "neuron-php/jobs": "0.2.*",
+        "phpmailer/phpmailer": "^6.9"
     },
     "require-dev": {
         "phpunit/phpunit": "9.*",
@@ -26,7 +26,10 @@
             "Neuron\\": "src/"
         },
         "files": [
-            "src/Bootstrap.php"
+            "src/Bootstrap.php",
+            "src/Cms/Auth/helpers.php",
+            "src/Cms/Email/helpers.php",
+            "src/Cms/View/helpers.php"
         ]
     },
     "autoload-dev": {
