--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "neuron-php/mvc": "0.8.*",
         "neuron-php/cli": "0.8.*",
         "neuron-php/jobs": "0.2.*",
+        "neuron-php/orm": "0.1.*",
         "phpmailer/phpmailer": "^6.9"
     },
     "require-dev": {
