--- a/resources/config/neuron.yaml
+++ b/resources/config/neuron.yaml
@@ -1,38 +1,50 @@
+# Neuron CMS Configuration
+# Main configuration file for the Neuron CMS application
+
 system:
-  timezone: US/Eastern
-  base_path: examples
-  routes_path: examples/config
+  timezone: UTC
+  base_path: resources
+  routes_path: resources/config
 
 logging:
   destination: \Neuron\Log\Destination\File
   format: \Neuron\Log\Format\PlainText
-  file: test.log
-  level: debug
+  file: storage/logs/app.log
+  level: info
 
 cache:
-  enabled: true
+  enabled: false
   storage: file
-  path: cache/views
+  path: storage/cache/views
   ttl: 3600
   html: true
   markdown: true
   json: false
   xml: false
-  # Garbage collection settings (optional, defaults shown)
-  # gc_probability: 0.01  # 1% chance to run GC on cache write
-  # gc_divisor: 100      # Used with probability for fine-tuning
 
 views:
-  path: views
+  path: resources/views
 
 site:
-  name: 'Neuron'
-  url: 'https://neuron.example.com'
-  description: 'A modern blogging platform built with Neuron.'
+  name: 'Neuron CMS'
+  url: 'https://localhost'
+  description: 'A modern content management system built with Neuron.'
+  title: 'Neuron CMS'
 
-blog:
-  path: 'blog'
-  title: 'Neuron Blog'
+# Theme Configuration
+# Controls the Bootswatch theme for different portals
+# Available themes: cerulean, cosmo, cyborg, darkly, flatly, journal, litera,
+# lumen, lux, materia, minty, morph, pulse, quartz, sandstone, simplex, sketchy,
+# slate, solar, spacelab, superhero, united, vapor, yeti, zephyr
+theme:
+  # Admin portal theme (for admin role users)
+  admin: vapor
+
+  # Member portal theme (for subscriber, editor, author roles)
+  subscriber: sandstone
+
+  # Guest theme (for public website and login/registration pages)
+  guest: sandstone
 
 # Member Registration and Management Configuration
 member:
