converts to using the new dto based request model.

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "neuron-php/cli": "0.8.*",
         "neuron-php/jobs": "0.2.*",
         "neuron-php/orm": "0.1.*",
+        "neuron-php/dto": "0.0.*",
         "phpmailer/phpmailer": "^6.9"
     },
     "require-dev": {
