--- a/src/Cms/Dtos/UpdateUserDto.yaml
+++ b/src/Cms/Dtos/UpdateUserDto.yaml
@@ -1,26 +1,19 @@
-properties:
+dto:
   username:
     type: string
     required: true
-    validators:
-      - IsNotEmpty
-      - IsStringLength:
-          min: 3
-          max: 50
+    length:
+      min: 3
+      max: 50
   email:
-    type: string
+    type: email
     required: true
-    validators:
-      - IsNotEmpty
-      - IsEmail
   password:
     type: string
     required: false
-    validators:
-      - IsStringLength:
-          min: 8
+    length:
+      min: 8
+      max: 255
   role:
     type: string
     required: true
-    validators:
-      - IsNotEmpty
