--- a/src/Cms/Dtos/CreatePostDto.yaml
+++ b/src/Cms/Dtos/CreatePostDto.yaml
@@ -1,3 +1,7 @@
+# Create Post DTO
+# Note: This DTO uses flat structure instead of composition (referencing PostFieldsDto)
+# because the RequestMapper doesn't yet support mapping flat POST data to nested DTO properties.
+
 dto:
   title:
     type: string
